Refactor the combining step to allow user defined functions here.
Remove the old trace_get_results, now instead simply provide a reporter function which gets called as soon as results are ready.
The combiner function used determines the order of these results and when they are released etc.
The combiner function can be selected from those built-in or a custom version can be defined results are provided when ready.
Quickly hacked the parallel tests to work with this update, these are still a bit messy.

Also some fixes some compile warnings.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -58,7 +58,7 @@ libtrace_la_SOURCES = trace.c trace_parallel.c common.h \
 		libtrace_arphrd.h \
 		data-struct/ring_buffer.c data-struct/vector.c data-struct/message_queue.c \
 		data-struct/deque.c data-struct/sliding_window.c data-struct/object_cache.c \
-		hash_toeplitz.c
+		hash_toeplitz.c combiner_ordered.c combiner_sorted.c combiner_unordered.c
 
 if DAG2_4
 nodist_libtrace_la_SOURCES = dagopts.c dagapi.c
