--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -125,6 +125,7 @@
 #define ASSERT_RET(run, cond) run
 #else
 #define ASSERT_RET(run, cond) assert(run cond)
+//#define ASSERT_RET(run, cond) run
 #endif
     
 #ifdef __cplusplus 
@@ -3198,7 +3199,7 @@ typedef struct libtrace_message_t {
 } libtrace_message_t;
 
 typedef void* (*fn_per_pkt)(libtrace_t* trace, libtrace_packet_t *p, libtrace_message_t *m, libtrace_thread_t *thread);
-typedef void* (*fn_reporter)(libtrace_t* trace, libtrace_result_t *r, libtrace_message_t *m);
+typedef void (*fn_reporter)(libtrace_t* trace, libtrace_result_t *r, libtrace_message_t *m);
 typedef uint64_t (*fn_hasher)(const libtrace_packet_t* packet, void *data);
 
 DLLEXPORT int trace_pstart(libtrace_t *libtrace, void* global_blob, fn_per_pkt per_pkt, fn_reporter reporter);
@@ -3223,7 +3224,6 @@ DLLEXPORT void * trace_get_tls(libtrace_thread_t *t);
 
 DLLEXPORT void trace_publish_result(libtrace_t *libtrace, libtrace_thread_t *t, uint64_t key, void * value, int type);
 typedef struct libtrace_vector libtrace_vector_t;
-DLLEXPORT int trace_get_results(libtrace_t *libtrace, libtrace_vector_t * results);
 
 DLLEXPORT int trace_post_reporter(libtrace_t *libtrace);
 DLLEXPORT int libtrace_thread_get_message_count(libtrace_t * libtrace);
@@ -3468,6 +3468,90 @@ struct user_configuration {
 #include <stdio.h>
 DLLEXPORT void parse_user_config(struct user_configuration* uc, char * str);
 DLLEXPORT void parse_user_config_file(struct user_configuration* uc, FILE *file);
+DLLEXPORT int libtrace_get_perpkt_count(libtrace_t* t);
+
+/**
+ * The methods we use to combine multiple outputs into a single output
+ * This is not considered a stable API however is public.
+ * Where possible use built in combiners
+ *
+ * NOTE this structure is duplicated per trace and as such can
+ * have functions rewritten, and in fact should if possible.
+ */
+typedef struct libtrace_combine libtrace_combine_t;
+struct libtrace_combine {
+
+	/**
+	 * Called at the start of the trace to allow datastructures
+	 * to be initilised and allow functions to be swapped if approriate.
+	 *
+	 * Also factors such as whether the trace is live or not can
+	 * be used to determine the functions used.
+	 * @return 0 if successful, -1 if an error occurs
+	 */
+	int (*initialise)(libtrace_t *,libtrace_combine_t *);
+
+	/**
+	 * Called when the trace ends, clean up any memory here
+	 * from libtrace_t * init.
+	 */
+	void (*destroy)(libtrace_t *, libtrace_combine_t *);
+
+	/**
+	 * Publish a result against it's a threads queue.
+	 * If null publish directly, expected to be used
+	 * as a single threaded optimisation and can be
+	 * set to NULL by init if this case is detected.
+	 */
+	void (*publish)(libtrace_t *, int thread_id, libtrace_combine_t *, libtrace_result_t *);
+
+	/**
+	 * Read as many results as possible from the trace.
+	 * Directy calls the users code to handle results from here.
+	 *
+	 * THIS SHOULD BE NON-BLOCKING AND READ AS MANY AS POSSIBLE
+	 * If publish is NULL, this probably should be NULL also otherwise
+	 * it will not be called.
+	 */
+	void (*read)(libtrace_t *, libtrace_combine_t *);
+
+	/**
+	 * Called when the trace is finished to flush the final
+	 * results to the reporter thread.
+	 *
+	 * There may be no results, in which case this should
+	 * just return.
+	 *
+	 * Libtrace state:
+	 * Called from reporter thread
+	 * No perpkt threads will be running, i.e. publish will not be
+	 * called again.
+	 *
+	 * If publish is NULL, this probably should be NULL also otherwise
+	 * it will not be called.
+	 */
+	void (*read_final)(libtrace_t *, libtrace_combine_t *);
+
+	/**
+	 * Pause must make sure any results of the type packet are safe.
+	 * That means trace_copy_packet() and destroy the original.
+	 * This also should be NULL if publish is NULL.
+	 */
+	void (*pause)(libtrace_t *, libtrace_combine_t *);
+
+	/**
+	 * Data storage for all the combiner threads
+	 */
+	void *queues;
+
+	/**
+	 * XXX - todo make a union of useful types
+	 * Configuration options what this does is upto the combiner
+	 * choosen.
+	 */
+	int configuration;
+};
+
 
 #define READ_EOF 0
 #define READ_ERROR -1
