--- a/test/Makefile
+++ b/test/Makefile
@@ -8,10 +8,11 @@ CFLAGS = -Wall -Wimplicit -Wformat -W -pedantic -pipe -g -O2 \
 		-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE
 CFLAGS += $(INCLUDE)
 libdir = $(PREFIX)/lib/.libs:$(PREFIX)/libpacketdump/.libs
-LDLIBS = -L$(PREFIX)/lib/.libs -L$(PREFIX)/libpacketdump/.libs -ltrace -lpacketdump 
+LDLIBS = -L$(PREFIX)/lib/.libs -L$(PREFIX)/libpacketdump/.libs -ltrace -lpacketdump
 
 BINS = test-pcap-bpf test-event test-time test-dir test-wireless test-errors \
-	test-plen test-autodetect test-ports test-fragment test-live test-live-snaplen
+	test-plen test-autodetect test-ports test-fragment test-live \
+	test-live-snaplen test-vxlan
 
 .PHONY: all clean distclean install depend test
 
