Fixed compile error when using DAG 5.2 libraries
The name of the ioctl to fetch DUCK information had changed in DAG version 5
and the old one no longer worked.

Fixed bug where reading from a DAG card using trace_event would not
produce DUCK packets, even if the user requested them.

Added support for the new DUCK format present in DAG version 5.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -382,6 +382,7 @@ typedef enum {
 	TRACE_RT_SERVERSTART	=16,/**< Reliable server has been restarted */
 	TRACE_RT_CLIENTDROP	=17,/**< Reliable client was lost */
 	TRACE_RT_METADATA	=18,/**< Packet contains server meta-data */
+	TRACE_RT_DUCK_5_0 	=19,/**< Dag 5.0 Duck */
 
 	/** Not actually used - all DATA types begin from this value */
 	TRACE_RT_DATA_SIMPLE	= 1000, 
