Ensure libdl is linked against libintel_dpdk.a
Not doing this causes build problems on certain systems, although the reason
why this is necessary for some systems and not others is not entirely
clear to me.

--- a/configure.in
+++ b/configure.in
@@ -417,6 +417,9 @@ fi
 
 if test "$ac_cv_search_dlopen" != "none required"; then 
 	LIBPKTDUMP_LIBS="$LIBPKTDUMP_LIBS $ac_cv_search_dlopen"
+	if test "$dpdk_found" = 1; then
+		LIBTRACE_LIBS="$LIBTRACE_LIBS -Wl,$ac_cv_search_dlopen"
+	fi
 fi
 
 if test "$have_pthread" = 1; then
