--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -62,6 +62,12 @@
  */
 
 #include <sys/types.h>
+#include <stddef.h>
+#include <stdio.h>
+/* Compile time assertion. Sourced from:
+ * http://www.pixelbeat.org/programming/gcc/static_assert.html */
+#define ct_assert(e) extern char (*ct_assert(void)) [sizeof(char[1 - 2*!(e)])]
+
 #ifndef WIN32
 #include <sys/time.h>
 #endif
@@ -1307,6 +1313,100 @@ typedef enum {
 	TRACE_OPTION_OUTPUT_COMPRESSTYPE
 } trace_option_output_t;
 
+/* To add a new stat field update this list, and the relevent places in
+ * libtrace_stat_t structure.
+ */
+/** An X Macro set for libtrace stat fields */
+#define LIBTRACE_STAT_FIELDS \
+	X(accepted) \
+	X(filtered) \
+	X(received) \
+	X(dropped) \
+	X(captured) \
+	X(errors)
+
+/**
+ * Statistic counters are cumulative from the time the trace is started.
+ * Trace pause will reset the counters, to zero.
+ * Always check \a{field}_valid is set before attempting to read the stored value.
+ *
+ * @note Always allocate this structure using trace_create_statistics().
+ *       This allows us to extend the structure in the future.
+ */
+typedef struct libtrace_stat_t {
+	// Align to 64 bits, because the compiler is likely to do this anyway.
+#if __BYTE_ORDER == __LITTLE_ENDIAN
+#define X(name) LT_BITFIELD64 name ##_valid : 1;
+	LIBTRACE_STAT_FIELDS
+#undef X
+	/* We use the remaining space as magic to ensure the structure
+	 * was alloc'd by us. We can easily decrease the no. bits without
+	 * problems as long as we update any asserts as needed */
+	LT_BITFIELD64 reserved1: 26; /**< Bits reserved for future fields */
+	LT_BITFIELD64 reserved2: 24; /**< Bits reserved for future fields */
+	LT_BITFIELD64 magic: 8; /**< A number stored against the format to
+				  ensure the struct was allocated correctly */
+#else
+	LT_BITFIELD64 magic: 8;
+	LT_BITFIELD64 reserved2: 24;
+	LT_BITFIELD64 reserved1: 26;
+	LT_BITFIELD64 dropped_valid: 1;
+	LT_BITFIELD64 received_valid: 1;
+	LT_BITFIELD64 filtered_valid: 1;
+	LT_BITFIELD64 accepted_valid: 1;
+#endif
+	/* These must all be uint64_t's, match this order with the X macro */
+	uint64_t accepted;
+	/**< The number of packets that have been read from the input trace
+	 * using trace_read_packet(). In the parallel framework this may include
+	 * some packets waiting in a batch yet to be seen by the user's
+	 * application.
+	 *
+	 * This does not include filtered packets because these do not make it
+	 * to trace_read_packet().
+	 *
+	 * @note This field replaces trace_get_accepted_packets()
+	 */
+	uint64_t filtered;
+	/**< The number of packets that were captured, but discarded for not
+	 * matching a provided filter.
+	 *
+	 * @note This field replaces trace_get_filtered_packets()
+	 */
+	uint64_t received;
+	/**< The total number of good packets which have been recevied. Including
+	 * those which are dropped and filtered. This does not include errors.
+	 *
+	 * @note This may include a small number of buffered packets
+	 *       not yet included in accepted.
+	 *
+	 * @note This field replaces trace_get_received_packets()
+	 */
+	uint64_t dropped;
+	/**< The number of packets that have been dropped on an input trace
+	 * due to lack of buffer space on the capturing device. This does not
+	 * included errored packets which are dropped directly by the card.
+	 *
+	 * @note This field replaces trace_get_dropped_packets()
+	 */
+	uint64_t captured;
+	/**< The number of received packets that have not been dropped. This
+	 * includes filtered packets.
+	 *
+	 * This is equivalent to received-dropped.
+	 *
+	 * @note This may include a small number of buffered packets
+	 *       not yet included in accepted.
+	 */
+	uint64_t errors;
+	/**< The number of packets that have been discarded by the network card
+	 * because they are invalid. That includes FCS mismatches, incorrect
+	 * packet lengths etc.
+	 */
+} libtrace_stat_t;
+
+ct_assert(offsetof(libtrace_stat_t, accepted) == 8);
+
 /** Sets an output config option
  *
  * @param libtrace	The output trace object to apply the option to
@@ -1398,8 +1498,11 @@ DLLEXPORT void trace_perror_output(libtrace_out_t *trace, const char *msg,...)
  * @returns The number of packets seen at the capture point before filtering.
  *
  * If the number is not known, this function will return UINT64_MAX
+ *
+ * @deprecated This function is deprecated: Use trace_get_statistics(), this
+ *             allows all statistic counters to be read in an atomic manner.
  */
-DLLEXPORT
+DLLEXPORT DEPRECATED
 uint64_t trace_get_received_packets(libtrace_t *trace);
 
 /** Returns the number of packets that were captured, but discarded for not
@@ -1409,8 +1512,11 @@ uint64_t trace_get_received_packets(libtrace_t *trace);
  * @returns The number of packets that were successfully captured, but filtered
  *
  * If the number is not known, this function will return UINT64_MAX
+ *
+ * @deprecated This function is deprecated: Use trace_get_statistics(), this
+ *             allows all statistic counters to be read in an atomic manner.
  */
-DLLEXPORT
+DLLEXPORT DEPRECATED
 uint64_t trace_get_filtered_packets(libtrace_t *trace);
 
 /** Returns the number of packets that have been dropped on an input trace due 
@@ -1420,8 +1526,11 @@ uint64_t trace_get_filtered_packets(libtrace_t *trace);
  * @returns The number of packets captured, but dropped due to buffer overruns
  *
  * If the number is not known, this function will return UINT64_MAX
+ *
+ * @deprecated This function is deprecated: Use trace_get_statistics(), this
+ *             allows all statistic counters to be read in an atomic manner.
  */
-DLLEXPORT
+DLLEXPORT DEPRECATED
 uint64_t trace_get_dropped_packets(libtrace_t *trace);
 
 /** Returns the number of packets that have been read from the input trace using
@@ -1431,9 +1540,107 @@ uint64_t trace_get_dropped_packets(libtrace_t *trace);
  * @returns The number of packets that have been read by the libtrace user.
  *
  * If the number is not known, this function will return UINT64_MAX
+ *
+ * @deprecated This function is deprecated: Use trace_get_statistics(), this
+ *             allows all statistic counters to be read in an atomic manner.
+ */
+DLLEXPORT DEPRECATED
+uint64_t trace_get_accepted_packets(libtrace_t *trace);
+
+/**
+ * Returns statistic counters for a trace, for a parallel trace this is a
+ * combined total.
+ * Where possible these are retrived atomically, however this behaviour depends
+ * on the underlying trace format.
+ *
+ * @param trace The input trace to examine.
+ * @param stats Optional, Filled upon return with statistics about the trace,
+ *              check the flags included to see if a given statistic is valid.
+ *              If NULL a statistic structure owned by libtrace is returned, this
+ *              should not be free'd and will become invalid if the trace is
+ *              destroyed.
+ *
+ * @return A pointer to the statistics structure.
+ * @note Use trace_create_stat() to create the stats object, this way future
+ *       versions of libtrace can add to the structure without breaking existing
+ *       code.
  */
 DLLEXPORT
-uint64_t trace_get_accepted_packets(libtrace_t *trace);
+libtrace_stat_t *trace_get_statistics(libtrace_t *trace, libtrace_stat_t *stats);
+
+
+/**
+ * Returns statistic counters for a single thread of a trace.
+ * Where possible these are retrived atomically, however this behaviour depends
+ * on the underlying trace format.
+ *
+ * @param trace The input trace to examine.
+ * @param t An optional thread to received stats for or NULL to retrive stats
+ *          for the current thread
+ * @param stats Filled upon return with statistics about the trace, check the
+ *              flags included to see if a given statistic is valid.
+ *
+ * @note Use trace_create_stat() to create the stats object, this way future
+ *       versions of libtrace can add to the structure without breaking existing
+ *       code.
+ */
+DLLEXPORT
+void trace_get_thread_statistics(libtrace_t *trace, libtrace_thread_t *t,
+                                 libtrace_stat_t *stats);
+
+/**
+ * Creates and returns a zeroed libtrace_stat_t structure.
+ *
+ * This allows us to add extra fields increasing the size of the structure
+ * without breaking existing libtrace applications.
+ *
+ * This structure should be free'd using free().
+ *
+ * @return A valid pointer to a libtrace_stat_t struct otherwise NULL if
+ *         memory was not available.
+ */
+DLLEXPORT libtrace_stat_t* trace_create_statistics(void);
+
+/**
+ * Performs the operation c=a-b accounting for valid fields.
+ * c is allowed to be a or b.
+ *
+ * @param a The minuend
+ * @param b The subtrahend
+ * @param c The resulting difference
+ */
+DLLEXPORT
+void trace_subtract_statistics(const libtrace_stat_t *a,
+                               const libtrace_stat_t *b, libtrace_stat_t *c);
+
+/**
+ * Performs operation c=a+b accounting for valid fields.
+ * c is allowed to be a or b.
+ *
+ * @param a The first operand
+ * @param b The second operand
+ * @param c The result
+ */
+DLLEXPORT
+void trace_add_statistics(const libtrace_stat_t *a,
+                          const libtrace_stat_t *b, libtrace_stat_t *c);
+
+/**
+ * Prints all valid stats to a file stream, (which could be stdout/err).
+ * By default the format "name: value" is used.
+ *
+ * @param s The statistic structure to print
+ * @param f The output file stream
+ * @param format An optional format string such as the default ("%s: %"PRIu64"\n")
+ *               This is passed to fprintf and called with two arguments
+ *               first a char* (%s) and second a uint64_t (%PRIu64).
+ *
+ * @return -1 if an error occurs when writing to the file stream, check errno.
+ *         Otherwise 0.
+ */
+DLLEXPORT
+int trace_print_statistics(const libtrace_stat_t *s, FILE *f,
+                           const char *format);
 
 
 /*@}*/
@@ -3265,7 +3472,7 @@ typedef union {
 
 	/* C99 Integer types */
 	/* NOTE: Standard doesn't require 64-bit
-     * but x32 and x64 gcc does */
+	 * but x32 and x64 gcc does */
 	int64_t sint64;
 	uint64_t uint64;
 
