--- a/configure.in
+++ b/configure.in
@@ -416,10 +416,10 @@ LIBS=
 
 if test "$have_numa" = 1; then
 	LIBTRACE_LIBS="$LIBTRACE_LIBS -lnuma"
-	AC_DEFINE(HAVE_LIBNUMA, 1, [Set to 1 if libnuma is found supported])
+	AC_DEFINE(HAVE_LIBNUMA, 1, [Set to 1 if libnuma is supported])
 	with_numa=yes
 else
-	AC_DEFINE(HAVE_LIBNUMA, 0, [Set to 1 if libnuma is found supported])
+	AC_DEFINE(HAVE_LIBNUMA, 0, [Set to 1 if libnuma is supported])
 	with_numa=no
 fi
 
@@ -456,7 +456,12 @@ fi
 
 
 if test "$have_clock_gettime" = 1; then
-    LIBTRACE_LIBS="$LIBTRACE_LIBS -lrt"
+	LIBTRACE_LIBS="$LIBTRACE_LIBS -lrt"
+	AC_DEFINE(HAVE_CLOCK_GETTIME, 1, [Set to 1 if clock_gettime is supported])
+	with_clock_gettime=yes
+else
+	AC_DEFINE(HAVE_CLOCK_GETTIME, 0, [Set to 1 if clock_gettime is supported])
+	with_clock_gettime=no
 fi
 
 
@@ -698,15 +703,16 @@ else
 fi
 
 if test x"$libtrace_dpdk" = xtrue; then
-    AC_MSG_NOTICE([Compiled with DPDK live capture support: Yes])
-    reportopt "Compiled with DPDK trace NUMA support" $with_numa
+	AC_MSG_NOTICE([Compiled with DPDK live capture support: Yes])
+	reportopt "Compiled with DPDK trace NUMA support" $with_numa
+	reportopt "Compiled with clock_gettime support" $with_clock_gettime
 elif test x"$want_dpdk" != "xno"; then
 #   We don't officially support DPDK so only report failure if the user
 #   explicitly asked for DPDK. That way, we can hopefully keep it hidden
 #   from most users for now...
-	
-    AC_MSG_NOTICE([Compiled with DPDK live capture support: No])
-    AC_MSG_NOTICE([Note: Requires DPDK v1.5 or newer])
+
+	AC_MSG_NOTICE([Compiled with DPDK live capture support: No])
+	AC_MSG_NOTICE([Note: Requires DPDK v1.5 or newer])
 fi
 reportopt "Compiled with LLVM BPF JIT support" $JIT
 reportopt "Building man pages/documentation" $libtrace_doxygen
