--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -3506,26 +3506,45 @@ typedef union {
 	/* Real numbers */
 	float rfloat;
 	double rdouble;
-} libtrace_generic_types_t;
+} libtrace_generic_t;
+ct_assert(sizeof(libtrace_generic_t) == 8);
 
 typedef struct libtrace_message_t {
 	int code;
-	libtrace_generic_types_t additional;
+	libtrace_generic_t additional;
 	libtrace_thread_t *sender;
 } libtrace_message_t;
 
 /** Structure holding information about a result */
 typedef struct libtrace_result_t {
 	uint64_t key;
-	libtrace_generic_types_t value;
+	libtrace_generic_t value;
 	int type;
 } libtrace_result_t;
 #define RESULT_NORMAL 0
 #define RESULT_PACKET 1
 #define RESULT_TICK   2
 
-
-typedef void* (*fn_per_pkt)(libtrace_t* trace, libtrace_packet_t *p, libtrace_message_t *m, libtrace_thread_t *thread);
+/**
+ * The definition for the main function that the user supplies to process
+ * packets.
+ *
+ * @param trace The trace the packet is related to.
+ * @param thread The thread the trace is related to.
+ * @param mesg_code The type of data ready, the most important being MESSAGE_PACKET.
+ * In this case data.pkt contains the packet.
+ * @param data A generic union of types that fit into 8 bytes, containing
+ * information dependent upon the mesg_code.
+ * @param sender The thread that the message originated from.
+ *
+ * The values of data and sender depend upon the mesg_code. Please see the
+ * documentation for the message as to what value these will contain.
+ */
+typedef void* (*fn_per_pkt)(libtrace_t* trace,
+                            libtrace_thread_t *thread,
+                            int mesg_code,
+                            libtrace_generic_t data,
+                            libtrace_thread_t *sender);
 typedef void (*fn_reporter)(libtrace_t* trace, libtrace_result_t *r, libtrace_message_t *m);
 typedef uint64_t (*fn_hasher)(const libtrace_packet_t* packet, void *data);
 
@@ -3536,9 +3555,9 @@ DLLEXPORT void trace_join(libtrace_t * trace);
 
 DLLEXPORT void libtrace_result_set_key(libtrace_result_t * result, uint64_t key);
 DLLEXPORT uint64_t libtrace_result_get_key(libtrace_result_t * result);
-DLLEXPORT void libtrace_result_set_value(libtrace_result_t * result, libtrace_generic_types_t value);
-DLLEXPORT libtrace_generic_types_t libtrace_result_get_value(libtrace_result_t * result);
-DLLEXPORT void libtrace_result_set_key_value(libtrace_result_t * result, uint64_t key, libtrace_generic_types_t value);
+DLLEXPORT void libtrace_result_set_value(libtrace_result_t * result, libtrace_generic_t value);
+DLLEXPORT libtrace_generic_t libtrace_result_get_value(libtrace_result_t * result);
+DLLEXPORT void libtrace_result_set_key_value(libtrace_result_t * result, uint64_t key, libtrace_generic_t value);
 DLLEXPORT void trace_destroy_result(libtrace_result_t ** result);
 
 // Ways to access Global and TLS storage that we provide the user
@@ -3548,7 +3567,7 @@ DLLEXPORT void * trace_set_tls(libtrace_thread_t *t, void * data);
 DLLEXPORT void * trace_get_tls(libtrace_thread_t *t);
 
 
-DLLEXPORT void trace_publish_result(libtrace_t *libtrace, libtrace_thread_t *t, uint64_t key, libtrace_generic_types_t value, int type);
+DLLEXPORT void trace_publish_result(libtrace_t *libtrace, libtrace_thread_t *t, uint64_t key, libtrace_generic_t value, int type);
 typedef struct libtrace_vector libtrace_vector_t;
 
 DLLEXPORT int trace_post_reporter(libtrace_t *libtrace);
@@ -3598,6 +3617,7 @@ typedef enum {
 } trace_parallel_option_t;
 
 enum libtrace_messages {
+	MESSAGE_PACKET,
 	MESSAGE_STARTING,
 	MESSAGE_RESUMING,
 	MESSAGE_STOPPING,
@@ -3612,7 +3632,7 @@ enum libtrace_messages {
 	MESSAGE_POST_REPORTER,
 	MESSAGE_POST_RANGE,
 	MESSAGE_TICK,
-	MESSAGE_USER
+	MESSAGE_USER = 1000
 };
 
 enum hasher_types {
@@ -3853,10 +3873,10 @@ struct libtrace_combine {
 	 * Configuration options, what this does is upto the combiner
 	 * chosen.
 	 */
-	libtrace_generic_types_t configuration;
+	libtrace_generic_t configuration;
 };
 
-DLLEXPORT void trace_set_combiner(libtrace_t *trace, const libtrace_combine_t *combiner, libtrace_generic_types_t config);
+DLLEXPORT void trace_set_combiner(libtrace_t *trace, const libtrace_combine_t *combiner, libtrace_generic_t config);
 
 #define READ_EOF 0
 #define READ_ERROR -1
