Add some example programs.
trivial_skeleton.c
timedemo.c - Shows how to deal with tracetime results (say printing statistics every X seconds) using TICK_INTERVAL

--- a/configure.in
+++ b/configure.in
@@ -38,7 +38,7 @@ AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile
 	tools/tracereplay/Makefile tools/tracediff/Makefile
 	tools/traceends/Makefile
 	examples/Makefile examples/skeleton/Makefile examples/rate/Makefile
-	examples/stats/Makefile examples/tutorial/Makefile
+	examples/stats/Makefile examples/tutorial/Makefile examples/parallel/Makefile
 	docs/libtrace.doxygen 
 	lib/libtrace.h libwandio/Makefile libwandio/tools/wandiocat/Makefile
 	])
