Add support to wandio for reading over HTTP
This adds a new IO Reader, HTTP which uses libcurl to read data from HTTP
(tested also with HTTPS).  The implementation is a lightly modified version of
the code used in the kurl library available at
https://github.com/attractivechaos/klib.

Regular reading has been tested (including processing trace files with
libtrace), but `seek` and `tell` have not been tested. I would be perfectly
happy if we remove this functionality, but I'll leave that up to you.

Known Issues:
 - When reading a trace from an HTTP URI, the trace format _must_ be
   specified, otherwise libtrace thinks that the format is `http`. It isn't
   clear to me the "correct" way to fix this (or even that it needs fixing.)
 - Calls to `http_open` and `http_close` are not strictly thread-safe because
   they call `curl_global_init`, which itself is not thread-safe. I have
   attempted to mitigate this problem by wrapping the call to `curl_global_init`
   in a mutex, but if users have other threads that are independently making
   calls to the same non-thread-safe functions that curl is...
 - OpenSSL support is almost certainly not thread-safe
   (http://curl.haxx.se/mail/lib-2004-08/0033.html).
 - When reading _very_ slowly over HTTP, the server may terminate the connection
   based on an inter-read timeout (`send_timeout` in NGINX).

--- a/configure.in
+++ b/configure.in
@@ -604,6 +604,29 @@ AS_IF([test "x$have_lzma" = "xyes"], [
 	with_lzma=no]
 )
 
+AC_ARG_WITH([http],
+        AC_HELP_STRING([--with-http], [build with support for reading files over http (using libcurl)]))
+
+AS_IF([test "x$with_http" != "xno"],
+        [
+        # we need curl_easy_pause which was added in 7.18.0
+        AC_CHECK_LIB(curl, curl_easy_pause, have_curl=yes, have_curl=no)
+	], [have_curl=no])
+
+AS_IF([test "x$have_curl" = "xyes"], [
+        if test "$ac_cv_lib_curl_curl_easy_pause" != "none required"; then
+                LIBWANDIO_LIBS="$LIBWANDIO_LIBS -lcurl"
+        fi
+        AC_DEFINE(HAVE_HTTP, 1, "Compiled with http support")
+        with_http=yes],
+
+
+        [AS_IF([test "x$with_http" = "xyes"],
+                [AC_MSG_ERROR([http requested but libcurl (> 7.18.0) not found])])
+        AC_DEFINE(HAVE_HTTP, 0, "Compiled with http support")
+        with_http=no]
+)
+
 # Define automake conditionals for use in our Makefile.am files
 AM_CONDITIONAL([HAVE_BPF_CAPTURE], [test "$ac_cv_have_decl_BIOCSETIF" = yes ])
 AM_CONDITIONAL([HAVE_DAG], [test "$libtrace_dag" = true])
@@ -618,6 +641,7 @@ AM_CONDITIONAL([HAVE_BZLIB], [test "x$with_bzip2" != "xno"])
 AM_CONDITIONAL([HAVE_ZLIB], [test "x$with_zlib" != "xno"])
 AM_CONDITIONAL([HAVE_LZO], [ test "x$with_lzo" != "xno"])
 AM_CONDITIONAL([HAVE_LZMA], [ test "x$with_lzma" != "xno"])
+AM_CONDITIONAL([HAVE_HTTP], [ test "x$with_http" != "xno"])
 
 # Check for miscellaneous programs
 AC_CHECK_PROG([libtrace_doxygen], [doxygen], [true], [false])
@@ -673,6 +697,7 @@ reportopt "Compiled with compressed trace (zlib) support" $with_zlib
 reportopt "Compiled with compressed trace (bz2) support" $with_bzip2
 reportopt "Compiled with compressed trace (lzo write only) support" $with_lzo
 reportopt "Compiled with compressed trace (lzma) support" $with_lzma
+reportopt "Compiled with http read support" $with_http
 if test x"$libtrace_dag" = xtrue; then
 	if test "$libtrace_dag_version" = 24; then
 		AC_MSG_NOTICE([Compiled with DAG live capture support: 2.4])
