Completed improvement of trace_strip_packet()
 * Removed the trace_copy_packet() if the packet is not totally owned
   by libtrace. I think we can get away without it and we really don't
   want the performance hit when dealing with live captures.
 * Replaced call to trace_get_layer3 with the old header parsing code from
   the previous version of trace_strip_packet(). The overhead of calling
   trace_get_layer3 was outweighing the performance gain from the change in
   memmove strategy.
 * Removed ability to selectively strip VLAN or MPLS headers only -- this was
   not that useful and supporting it would make the code much more complex.
 * Updated trace_get_layer3 to use the cached layer 2 header if available
   rather than making a call to trace_get_layer2 and getting it from there.
   This saves us a bit of function call overhead.
 * Make sure we reset the layer 2 cached info if we shift the Ethernet header.
 * Strip PPPoE in addition to MPLS and VLAN.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1602,19 +1602,8 @@ DLLEXPORT void *trace_get_packet_buffer(const libtrace_packet_t *packet,
 DLLEXPORT SIMPLE_FUNCTION DEPRECATED
 void *trace_get_link(const libtrace_packet_t *packet);
 
-/**
- * Supported masks for stripping headers from packets.
- */ 
-enum {
-        TRACE_STRIP_VLAN = 0x01, /**< Strip 802.1Q (VLAN tag) headers */
-        TRACE_STRIP_MPLS = 0x02  /**< Strip MPLS headers */
-};
-
-/** Strips certain headers from a given packet.
+/** Strips layer 2.5 headers from a given packet.
  * @param packet        The packet to strip headers from.
- * @param stripopts     A mask to indicate which headers should be stripped.
- * If multiple header types are to be stripped, these should be ORed together
- * to create the full mask. A mask of zero will strip all strippable headers.
  *
  * @return The packet with the requested headers removed (if they were
  * present).
@@ -1635,13 +1624,8 @@ enum {
  * for now. Passing in packets of other link types will simply result in
  * the original packet being returned unmodified.
  *
- * @note Depending on the input source, this function may need to copy the
- * original packet to be able to safely modify the contents. This may have
- * a major impact on performance so avoid stripping packets unless absolutely
- * necessary.
  */
-DLLEXPORT libtrace_packet_t *trace_strip_packet(libtrace_packet_t *packet,
-                int stripopts);
+DLLEXPORT libtrace_packet_t *trace_strip_packet(libtrace_packet_t *packet);
 
 /** Get a pointer to the IPv4 header (if any) for a given packet
  * @param packet  	The packet to get the IPv4 header for
