--- a/configure.in
+++ b/configure.in
@@ -412,7 +412,7 @@ if test "$want_dpdk" != no; then
 fi
 
 # Check for PACKET_FANOUT (borrowed from Suricata)
-AC_CHECK_DECL([PACKET_FANOUT_QM],
+AC_CHECK_DECL([PACKET_FANOUT],
         AC_DEFINE([HAVE_PACKET_FANOUT],[1],
         [Recent packet fanout support is available]),
         [],
