Make -c option work for tracertstats
It's only an approximate stopping point (a lower bound to be exact), as we
only check whether we've passed the count in the reporting thread.

Removed references to tracertstats_parallel from Makefile.am

--- a/tools/tracertstats/Makefile.am
+++ b/tools/tracertstats/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = tracertstats tracertstats_parallel
+bin_PROGRAMS = tracertstats 
 man_MANS = tracertstats.1
 EXTRA_DIST = $(man_MANS)
 
@@ -15,5 +15,3 @@ OUTPUT_MODULES=output_csv.c output_html.c output_txt.c $(LIBGDC_MODULES)
 include ../Makefile.tools
 tracertstats_SOURCES = tracertstats.c output.h output.c $(OUTPUT_MODULES)
 tracertstats_LDADD = -ltrace $(OUTPUT_PNG_LD)
-tracertstats_parallel_SOURCES = tracertstats_parallel.c output.h output.c $(OUTPUT_MODULES)
-tracertstats_parallel_LDADD = -ltrace $(OUTPUT_PNG_LD)
