Reworked callback API and removed old per_msg and reporter functions
Updated tracertstats to use the new callback API.

Extended the callback approach to the reporter thread as well as the per
packet threads.

Added libtrace_callback_set_t structure, which is used to register the
user callback functions.

Added callback functionality for MESSAGE_RESULT (needed now that reporter
threads also do callbacks) and MESSAGE_USER (for user-defined messages). The
MESSAGE_USER callback is essentially the same as the old per_msg function
style.

Updated combiners to use send_message to pass results to the reporter thread.
send_message itself is now no longer static, so that combiners can use it.

Disabled building of tracestats_parallel as it was using the older version
of the callback API. Will update in a future commit.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -252,6 +252,9 @@ typedef struct libtrace_filter_t libtrace_filter_t;
 /** Opaque structure holding information about libtrace thread */
 typedef struct libtrace_thread_t libtrace_thread_t;
 
+/** Opaque structure holding callback functions for libtrace threads */
+typedef struct callback_set libtrace_callback_set_t;
+
 /** If the packet has allocated its own memory the buffer_control should be
  * set to TRACE_CTRL_PACKET, so that the memory will be freed when the packet
  * is destroyed. If the packet has been zerocopied out of memory owned by
@@ -1478,6 +1481,20 @@ DLLEXPORT void trace_destroy_dead(libtrace_t *trace);
  * @param trace		The output trace to be destroyed
  */
 DLLEXPORT void trace_destroy_output(libtrace_out_t *trace);
+
+/** Create a callback set that can be used to define callbacks for parallel
+  * libtrace threads.
+  *
+  * @return A pointer to a freshly allocated callback set.
+  */
+DLLEXPORT libtrace_callback_set_t *trace_create_callback_set();
+
+/** Destroys a callback set, freeing up an resources it was using.
+ *
+ * @param cbset         The callback set to be destroyed.
+ */
+DLLEXPORT void trace_destroy_callback_set(libtrace_callback_set_t *cbset);
+
 
 /** Check (and clear) the current error state of an input trace
  * @param trace		The input trace to check the error state on
