Improved parallel traceanon
 * Updated to use new parallel API.
 * Use libcrypto for AES operations.
 * Rename -f option to -F to avoid confusion with normal filtering options.
 * Add OO code for implementing anonymisation methods.
 * Add ability to anonymise IPv6 addresses using cryptopan.
 * Make sure ICMPv6 checksums are replaced.
 * Remove unnecessary testing code, e.g. hash functions, debug output.
 * Add maximum threads CLI option.
 * Replaced useless trace_help option with conventional -h option.

--- a/tools/traceanon/Makefile.am
+++ b/tools/traceanon/Makefile.am
@@ -1,14 +1,10 @@
-bin_PROGRAMS = traceanon traceanon_parallel
+bin_PROGRAMS = traceanon 
 
 man_MANS = traceanon.1
 EXTRA_DIST = $(man_MANS)
 
 include ../Makefile.tools
-traceanon_SOURCES = traceanon.c rijndael.h rijndael.c panon.h panon.c ipenc.c ipenc.h 
-traceanon_parallel_SOURCES = traceanon_parallel.c rijndael.h rijndael.c panon.h panon.c ipenc.c ipenc.h 
+#traceanon_SOURCES = traceanon.c rijndael.h rijndael.c panon.h panon.c ipenc.c ipenc.h 
+traceanon_SOURCES = traceanon.cc Anon.cc Anon.h
 
-# rijndael.c does lots of nasty casting that is going to be a nightmare to fix
-# and debug - I'm going to disable this warning in the interim, as it's really
-# messy and hopefully isn't actually an issue. 
-traceanon_CFLAGS = $(AM_CFLAGS)
-traceanon_parallel_CFLAGS = $(AM_CFLAGS)
+traceanon_CPPFLAGS = $(AM_CPPFLAGS)
